--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -13,6 +13,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import arimafd as oa\n",
+    "\n",
+    "my_array = np.random.normal(size=1000) # init array\n",
+    "my_array[-3] = 1000 # init anomaly\n",
+    "ts = pd.DataFrame(my_array,\n",
+    "                  index=pd.date_range(start='01-01-2000',\n",
+    "                                      periods=1000,\n",
+    "                                      freq='H'))\n",
+    "\n",
+    "my_arima = oa.Arima_anomaly_detection(ar_order=3)\n",
+    "my_arima.fit(ts[:500])\n",
+    "ts_anomaly = my_arima.predict(ts[500:])\n",
+    "\n",
+    "\n",
+    "# or you can use for streaming:\n",
+    "# bin_metric = []\n",
+    "# for i in range(len(df)):\n",
+    "#     bin_metric.append(my_arima.predict(df[i:i+1]))\n",
+    "# bin_metric = pd.concat(bin_metric)\n",
+    "# bin_metric\n",
+    "\n",
+    "# for evaluating results you can use https://tsad.readthedocs.io/en/latest/Evaluating.html \n",
+    "ts_anomaly"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
