--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,18 +4,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import arimafd as oa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time seconds: 1.8961942195892334\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2000-01-21 20:00:00    0\n",
+       "2000-01-21 21:00:00    0\n",
+       "2000-01-21 22:00:00    0\n",
+       "2000-01-21 23:00:00    0\n",
+       "2000-01-22 00:00:00    0\n",
+       "                      ..\n",
+       "2000-02-11 11:00:00    0\n",
+       "2000-02-11 12:00:00    0\n",
+       "2000-02-11 13:00:00    0\n",
+       "2000-02-11 14:00:00    1\n",
+       "2000-02-11 15:00:00    1\n",
+       "Freq: H, Length: 500, dtype: int32"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
